correction to chi2 test

--- a/Statistics/Hypothesis Testing.ipynb
+++ b/Statistics/Hypothesis Testing.ipynb
@@ -396,8 +396,8 @@
      "output_type": "stream",
      "text": [
       "\n",
-      "H0 - there is a dependence between gender and the desire to find a job in the contingency table.\n",
-      "HA - there is no dependence between gender and the desire to find a job in the contingency table.\n",
+      "H0 - there is no dependence between gender and the desire to find a job in the contingency table.\n",
+      "HA - there is a dependence between gender and the desire to find a job in the contingency table.\n",
       "\n",
       "9.336654119709161\n",
       "Accept H0\n"
@@ -407,8 +407,8 @@
    "source": [
     "pval, chi2, _, expected = t.chi2_contingency(xtab)\n",
     "print('''\n",
-    "H0 - there is a dependence between gender and the desire to find a job in the contingency table.\n",
-    "HA - there is no dependence between gender and the desire to find a job in the contingency table.\n",
+    "H0 - there is no dependence between gender and the desire to find a job in the contingency table.\n",
+    "HA - there is a dependence between gender and the desire to find a job in the contingency table.\n",
     "''')\n",
     "result = 'Reject H0' if pval < 0.05 else \"Accept H0\"\n",
     "print(pval)\n",
@@ -424,7 +424,7 @@
   {
    "cell_type": "markdown",
    "source": [
-    "### HA - there is no dependence between gender and the desire to find a job in the contingency table."
+    "### H0 - there is no dependence between gender and the desire to find a job in the contingency table."
    ],
    "metadata": {
     "collapsed": false
@@ -494,7 +494,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 16,
    "outputs": [
     {
      "data": {
@@ -529,7 +529,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "outputs": [],
    "source": [],
    "metadata": {
