--- a/Statistics/Hypothesis Testing.ipynb
+++ b/Statistics/Hypothesis Testing.ipynb
@@ -528,8 +528,98 @@
    }
   },
   {
+   "cell_type": "markdown",
+   "source": [
+    " # Fisher exact test\n",
+    " - is used for small amount of observation\n",
+    " - analogue of chi2 test\n",
+    " - uses combinatorics to evaluate `p-value`"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "### Use fisher test in order to spot the probability of getting difference between cures by accepting H0"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 17,
+   "outputs": [
+    {
+     "data": {
+      "text/plain": "         Healed  Not Healed\nCure #1       1           3\nCure #2       3           1",
+      "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>Healed</th>\n      <th>Not Healed</th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>Cure #1</th>\n      <td>1</td>\n      <td>3</td>\n    </tr>\n    <tr>\n      <th>Cure #2</th>\n      <td>3</td>\n      <td>1</td>\n    </tr>\n  </tbody>\n</table>\n</div>"
+     },
+     "execution_count": 17,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "xtab = np.array([[1, 3], [3, 1]])\n",
+    "df = pd.DataFrame(xtab, columns=[\"Healed\", \"Not Healed\"], index=['Cure #1', \"Cure #2\"])\n",
+    "df"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "H0 - there is not dependence between Cures and Healing\n",
+      "HA - there is a dependence between Cures and Healing\n",
+      "\n",
+      "0.48571428571428527\n",
+      "Accept H0\n"
+     ]
+    }
+   ],
+   "source": [
+    "oddsr, pval = t.fisher_exact(df)\n",
+    "print('''\n",
+    "H0 - there is no dependence between Cures and Healing\n",
+    "HA - there is a dependence between Cures and Healing\n",
+    "''')\n",
+    "result = 'Reject H0' if pval < 0.05 else \"Accept H0\"\n",
+    "print(pval)\n",
+    "print(result)"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "### H0 - there is not dependence between Cures and Healing"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "outputs": [],
    "source": [],
    "metadata": {
